# rust-chip-8

./: Cargo.toml  LICENSE  README.md  output
src/: main.rs
src/chip8/: cpu.rs  display.rs  keyboard.rs  mod.rs  optcodes.rs  sound.rs
