[package]
name = "chip8"
version = "0.1.0"
authors = ["quirinux"]
edition = "2018"

[dependencies]
structopt = "0.2"
rand = "0.7"
gl = "0.6.0"
log = "0.4.0"
env_logger = "0.6.2"
num-traits = "0.2"
rodio = "0.9.0"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["ttf","image","gfx","mixer"]

